<?xml version="1.0"?>
<package format="2">
  <name>yolov10_ros_msgs</name>
  <version>1.0.0</version>
  <description>The yolov10_ros_msgs package</description>

  <maintainer email="sam8899yy@gmail.com">sam</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>

  </export>
</package>
